<resources>
    <string name="app_name">PassFence</string>

    <string name="package_name" translatable="false">tech.khash.passfence</string>

    <!--activity names-->
    <string name="view_geofences_map">View GeoFences on Map</string>
    <string name="action_settings">Settings</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your have registered too many locations</string>
    <string name="geofence_too_many_pending_intents">Too many pending intents</string>
    <string name="unknown_geofence_error">Unknown Error</string>
    <string name="geofence_transition_invalid_type">Invalid transition type</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>


    <!--Ads stuff-->
    <string name="banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_app_id" translatable="false">ca-app-pub-5875569058891842/9008946581</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-5875569058891842~7947146351</string>

    <string name="no_saved_location">No saved locations!</string>
    <string name="add_location_empty_view_text">Add locations using the \"+\" button or from menu</string>


    <!--Add Geofence class-->
    <string name="name_add_fence">Name:</string>
    <string name="name_add_fence_hint">Enter name here</string>
    <string name="radius_add_fence">Radius (m)</string>
    <string name="duration_add_fence">Duration (hr)</string>
    <string name="enter">Enter</string>
    <string name="exit">Exit</string>
    <string name="add_geofence">Add Location</string>
    <string name="error_drawing_circle">Error drawing circle</string>

    <string name="name_required_toast">Name required</string>
    <string name="criteria_required_toast">Criteria required</string>
    <string name="duplicate_name_toast">Name is already registered</string>
    <string name="geofence_added_toast">Added</string>
    <string name="geofence_updated_toast">Updated</string>
    <string name="error_geofence_add">Error adding location</string>
    <string name="error_geofence_update">Error updating location</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="geocoder_not_available_toast">Geocoder not available</string>
    <string name="no_results_found_toast">No results found</string>
    <string name="permission_required_text_dialog">This app requires user\'s location to work properly. This app does not store user\'s location.\nWould you like to turn it on now?</string>
    <string name="permission_required_title_dialog">Permission required</string>
    <string name="permission_required_yes_dialog">Give permission</string>
    <string name="no">No</string>
    <string name="criteria_add_fence">Criteria:</string>
    <string name="update">Update</string>
    <string name="toast_no_location_permission">Location permission denied</string>

    <!--Unsaved Alert dialog-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!--Delete all aler dialog-->
    <string name="delete_all_dialog_msg">Are you sure you want to delete all registered geofences?</string>
    <string name="delete_all">Delete All</string>
    <string name="cancel">Cancel</string>
    <string name="geofence_removed">removed</string>
    <string name="error_remove_geofence">Error removing location</string>

    <!--Delete geofence dialog-->
    <string name="dialog_delete_fence">Are you sure you want to delete</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>


    <!--Adapter-->
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="expires_colon">Expires:</string>
    <string name="criteria_colon">Criteria:</string>


    <!--Fence class-->
    <string name="never">Never</string>
    <string name="expired">Expired</string>
    <string name="enter_exit">Enter/Exit</string>
    <string name="error">Error</string>
    <string name="expires_never">Never expires</string>

    <!--Map View-->
    <string name="no_geofence_show_toast">No registered locations</string>
    <string name="id_colon">Id:</string>
    <string name="refresh">Refresh</string>

    <!--Menus-->
    <string name="sort_by_name_asc">Sort by name (Asc)</string>
    <string name="sort_by_name_des">Sort by name (Des)</string>
    <string name="sort_by_expiry_asc">Sort by expiry (Asc)</string>
    <string name="sort_by_expiry_des">Sort by expiry (Des)</string>
    <string name="search">Search</string>

    <!--Notification channel-->
    <string name="notification_name">Notification Settings</string>
    <string name="notification_description">Pass Fence Notifications</string>


    <!--Main Activity Menu-->
    <string name="settings">Settings</string>
    <string name="rate_app">Rate Us</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="share_intent_title">Share PassFence</string>
    <string name="share_dialog_title">Check this app out!</string>
    <string name="google_play_address" translatable="false">https://play.google.com/store/apps/details?id=tech.khash.passfence</string>
    <string name="contact_email" translatable="false">passfence@khash.tech</string>

    <!--Notification-->
    <string name="notification_message">Tap to manage password</string>


    <!--SETTINGS-->
    <string name="title_activity_settings">Settings</string>

    <!--Preference Keys-->
    <string name="array_pref_key" translatable="false">array_pref_key</string>
    <string name="ringtone_pref_key" translatable="false">notification_ringtone_key</string>
    <string name="vibrate_pref_key" translatable="false">notification_vibrate_key</string>
    <string name="led_pref_key" translatable="false">notification_led_key</string>
    <string name="priority_pref_key" translatable="false">notification_priority_key</string>
    <string name="color_picker_pref_key" translatable="false">notification_color_picker_key</string>

    <string name="pick_blink_color">Pick Blink Color</string>
    <string name="notifications">Notifications</string>
    <string name="vibrate">Vibrate</string>
    <string name="blink_light">Blink Light</string>
    <string name="ringtone">Ringtone</string>
    <string name="priority">Priority</string>
    <string name="change_notification_settings_button">Change notification settings</string>

    <!--priority-->
    <string name="priority_unspecified">Unspecified</string>
    <string name="priority_none">None</string>
    <string name="priority_minimum">Minimum</string>
    <string name="priority_low">Low</string>
    <string name="priority_default">Default</string>
    <string name="priority_high">High</string>
    <string name="priority_maximum">Maximum</string>

    <!--explanation dialog settings-->
    <string name="settings_explanation_dialog_title">Android Oreo or higher phone</string>
    <string name="settings_explanation_dialog_body">In these newer phones, notification settings (vibrate, sound, and light) need to be modified in app\'s notification channel.
    \nYou may view the set values here; however, you need to go to the settings to modify them.</string>
    <string name="got_to_settings">Go to Settings</string>


    <!--Navigation Drawer-->
    <string name="communication">Communication</string>
    <string name="add_new_location">Add New Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="view_locations_on_map">View Locations on Map</string>
    <string name="list_empty_toast">List is empty</string>
    <string name="all_locations_removed_toast">All locations removed</string>

    <string name="reactivate">Reactivate</string>


    <!--About text-->
    <string name="about_text">Have you ever removed your phone’s password (lock screen) while you
        are at home, only to find yourself panicking when you find out that you forgot to add it
        again after leaving the house? Not to mention you almost lost your phone before realizing
        this near-miss incident could have had catastrophic consequences if it fell to the wrong
        hands. They would have access to all your phone’s contacts, pictures, videos, not to mention
        all your apps\’ accounts including your emails and social media.
        \n\nThis near-miss would never have to happen again thanks to Pass Fence. This easy-to-use
        app lets the user add a number of saved places (locations on the map) and automatically get
        notified (using notifications) when they enter and/or exit those areas. If they wish, they
        can simply tap the notification, and be sent to their phone’s settings, directly to the lock
        screen page.
        \n\nThis app can have numerous other usages other than setting and removing passwords, you
        can save these locations when you want to get notified upon entering or exiting these places
        to be used for any other reasons.
        \n\nFeatures:
        \n•	Responsive, simple, easy-to-use app.
        \n•	You can either manually select the location from the map, or you can search for specific
        addresses.
        \n•	Highly customizable.
        \n•	You can name every location, select its location, and define the duration that you want
        this location stay active (from a few hours, to indefinitely), set the criteria (enter only,
        exit only, enter and exit), and set a radius of the coverage around your location.
        \n•	Easily view all your saved locations on the map. You can easily view each saved locations
        details when you click on them.
        \n•	You will see the list of all your saved locations right from the main screen, you can
        sort them alphabetically, or in a chronological order either ascending or descending.
        \n•	You can easily add places from the main screen by pressing a simple button.
        \n•	You can easily Edit, or Delete any place by pressing and holding on the desired
        location from the list, and then you can choose to modify/edit, or delete.
        \n•	You may also delete all your saved locations all at once.
        \n•	You can re-activate expired places.
        \n\nIn order for this app to send you notifications based on these saved locations/places,
        it requires location permission. This app does not save, nor share any personal information
        including the user’s location.</string>


    <!--Toasts-->


</resources>
