<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_add_location"
        android:icon="@drawable/ic_add_black"
        android:title="@string/add_new_location" />
    <item
        android:id="@+id/nav_edit_location"
        android:icon="@drawable/ic_edit_black"
        android:title="@string/edit_location" />
    <item
        android:id="@+id/nav_map_view"
        android:icon="@drawable/ic_map_black"
        android:title="@string/view_locations_on_map" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/settings"/>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact_black"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_black"
                android:title="@string/rate_app" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black"
                android:title="@string/share" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_black"
        android:title="@string/help" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about_black"
        android:title="@string/about" />

    <item
        android:id="@+id/nav_privacy_policy"
        android:title="@string/privacy_policy" />


</menu>