<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="36dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/notifications"
        android:textStyle="bold"/>

    <Switch
        android:id="@+id/switch_vibrate"
        android:text="@string/vibrate"
        style="@style/settings_oreo_switch_style" />

    <Switch
        android:id="@+id/switch_led"
        android:text="@string/blink_light"
        style="@style/settings_oreo_switch_style" />

    <TextView
        android:id="@+id/text_ringtone_header"
        android:text="@string/ringtone"
        style="@style/settings_oreo_text_header_style" />

    <TextView
        android:id="@+id/text_ringtone_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/text_priority_header"
        android:text="@string/priority"
        style="@style/settings_oreo_text_header_style" />
    <TextView
        android:id="@+id/text_priority_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/button_notification"
        style="@style/button_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/change_notification_settings_button"/>

</LinearLayout>